--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,49 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
+.header-container{
+  width: 80%;
+  margin: 0 auto;
+}
+
+.main-content{
+  width: 80%;
+  margin: 0 auto;
+  padding: 60px 0;
+  text-align: center;
+}
+
+.beer-list-img{
+  width: 40px;
+  height: 40px;
+}
+
+.beer-index-icon{
+  width: 100px;
+  height: 100px;
+  border: 1px solid rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+  border-radius: 50%;
+}
+
+.beer-show{
+
+    &-img{
+      width: 250px;
+      height: 250px;
+      padding: 15px;
+      box-shadow: 2px 2px 8px black;
+      border: 2px solid black;
+      border-radius: 50%;
+      margin: 30px 0px;
+    }
+}
