--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Fontawesome
+@import '~@fortawesome/fontawesome-free/css/all.min.css';
+
 
 *{
   box-sizing: border-box;
